tests/derive-tests/variant_discriminant/fail/nested_with_value.err.txt
error: conflicting with use of `nesting = …`
  --> /tests/derive-tests/variant_discriminant/fail/nested_with_value.rs:11:65
   |
11 |     #[enumcapsulate(discriminant(nested = VariantADiscriminant, value = 42))]
   |                                                                 ^^^^^
error: could not compile `<CRATE>` (bin "<BIN>") due to 1 previous error
